--- a/src/main/java/vn/edu/nuce/daotao/StoreManager/MainFrame.form
+++ b/src/main/java/vn/edu/nuce/daotao/StoreManager/MainFrame.form
@@ -205,7 +205,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/images/doanhthu.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="DOANH THU"/>
+            <Property name="text" type="java.lang.String" value="TH&#x1ed0;NG K&#xca;"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btDoanhthuActionPerformed"/>
