--- a/src/main/java/vn/edu/nuce/daotao/StoreManager/view/frame/DetailInvoiceJpanel.form
+++ b/src/main/java/vn/edu/nuce/daotao/StoreManager/view/frame/DetailInvoiceJpanel.form
@@ -297,7 +297,7 @@
                               <Color blue="0" green="0" red="ff" type="rgb"/>
                             </Property>
                             <Property name="horizontalAlignment" type="int" value="0"/>
-                            <Property name="text" type="java.lang.String" value="Chi ti&#x1ebf;t h&#xf3;a &#x111;&#x1a1;n"/>
+                            <Property name="text" type="java.lang.String" value="Chi ti&#x1ebf;t phi&#x1ebf;u nh&#x1ead;p"/>
                             <Property name="toolTipText" type="java.lang.String" value=""/>
                             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                               <Color id="Hand Cursor"/>
@@ -513,7 +513,6 @@
                             </Component>
                             <Component class="javax.swing.JTextField" name="txtPrice">
                               <Properties>
-                                <Property name="editable" type="boolean" value="false"/>
                                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                                   <Font name="Cambria" size="14" style="0"/>
                                 </Property>
